--- a/index.html
+++ b/index.html
@@ -27,9 +27,24 @@
     <li>Explore the coast on your own or Join our guided tours</li>
     <li>Relax in our lodge while enjoying complimentary appetizers and beverages</li>
     <li>Savor nightly fine dining with an ocean view</li>
+    <br>
+    <div>
+      Pacific Trails Resort
+      <br>
+      12010 Pacific Trails Road
+      <br>
+      Zephyr, CA 95555
+      <br>
+      <br>
+      888-555-5555
+    </div>
   </ul>
-  <footer>
-  </footer>
+</main>
+<footer>
+  <i><small>Copyright &copy; 2022 Pacific Trails Resort</small></i>
+  <br>
+  <i><small><a href="mailto:S534229@nwmissouri.edu">S534229@nwmissouri.edu</a></i>
+</footer>
 
 
 </html>
